--- a/index.html
+++ b/index.html
@@ -7,16 +7,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2>Translate the word to Kuzhale!</h2>
-    <div id="wordDisplay"></div>
-    <div class="game-container" id="gameContainer"></div>
-    <div class="answer-box" id="answerBox"></div>
-    <div class="controls">
-        <button onclick="undoLast()">Undo</button>
-        <button onclick="restartWord()">Re-Shuffle</button>
+    <div class="container">
+        <h2>Translate the word to Kuzhale!</h2>
+        <div id="wordDisplay" class="word-display"></div>
+        
+        <div class="game-container" id="gameContainer"></div>
+
+        <div class="answer-section">
+            <div class="answer-box" id="answerBox"></div>
+            <div class="emoji-container" id="emoji">😐</div>
+        </div>
+
+        <div class="controls">
+            <button class="btn" onclick="undoLast()">↩ Undo</button>
+            <button class="btn shuffle-btn" onclick="restartWord()">🔄 Re-Shuffle</button>
+        </div>
+
+        <div id="result"></div>
     </div>
-    <div id="result"></div>
-    <div class="emoji-container" id="emoji">😐</div>
+    
     <script src="script.js"></script>
 </body>
 </html>
